--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "4.4.0"
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
