--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^1.1.1",
     "cookie-parser": "^1.4.1",
     "cookie-session": "^2.0.0-alpha.1",
     "debug": "^2.2.0",
