--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^1.1.1",
     "cookie-parser": "^1.4.1",
     "cookie-session": "^2.0.0-alpha.1",
     "debug": "^2.2.0",
@@ -20,6 +19,7 @@
     "jade": "^1.11.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.13",
+    "mongoose-session": "0.0.4",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
     "passport": "^0.3.2",
