--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "4.4.0"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.4",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
@@ -16,6 +17,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "http-errors": "^1.4.0",
     "jade": "^1.11.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.13",
